# SensorPipeLine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  cpplint.sh
examples/: phase1_demo.cpp
include/: frames.hpp  units.hpp
tests/: compile_time_tests.cpp  runtime_tests.cpp
